--- a/debug/tile.html
+++ b/debug/tile.html
@@ -3,62 +3,37 @@
 <head>
 	<title>Kothic JS tile test</title>
 
-	<script src="test-tile.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.6.3/leaflet.css" />
+
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 
 	<!-- Include Kothic renderer sources -->
-	<script src="kothic-include.js"></script>
-
-	<!-- osmosnimki.ru style (Generated from MapCSS) -->
-	<script src="styles/osmosnimki.js"></script>
+	<script src="kothic.js"></script>
 </head>
 <body>
-	<canvas id="map" width="1024" height="1024"></canvas>
+	<canvas id="map" width="512" height="512"></canvas>
 
 	<script type="text/javascript">
+	var css = "way[!boundary] {width: 1;color: red;} way[boundary=administrative] {width: 1;color: blue;dashes: 30,30;}"
 
-        invertYAxe(tile_data);
+	var mapcss = new window.MapCSS(css, {
+		cache: {},
+	});
 
-        MapCSS.onImagesLoad = function () {
-            Kothic.render('map', tile_data, tile_zoom, {
-                styles: ['osmosnimki']
-            });
-        };
+	var kothic = new window.Kothic(mapcss, {
+		//Synchronous mode for testing reasons
+		getFrame: (callback) => callback(),
+		browserOptimizations: false,
+		debug: true
+	});
 
-        MapCSS.preloadSpriteImage("osmosnimki", "http://toolserver.org/~osm/kothic/osmosnimki.png");
+	var canvas = document.getElementById('map');
 
-        function invertYAxe(data) {
-            var type, coordinates, tileSize = data.granularity, i, j, k, l, feature;
-            for (i = 0; i < data.features.length; i++) {
-                feature = data.features[i];
-                coordinates = feature.coordinates;
-                type = data.features[i].type;
-                if (type == 'Point') {
-                    coordinates[1] = tileSize - coordinates[1];
-                } else if (type == 'MultiPoint' || type == 'LineString') {
-                    for (j = 0; j < coordinates.length; j++) {
-                        coordinates[j][1] = tileSize - coordinates[j][1];
-                    }
-                } else if (type == 'MultiLineString' || type == 'Polygon') {
-                    for (k = 0; k < coordinates.length; k++) {
-                        for (j = 0; j < coordinates[k].length; j++) {
-                            coordinates[k][j][1] = tileSize - coordinates[k][j][1];
-                        }
-                    }
-                } else if (type == 'MultiPolygon') {
-                    for (l = 0; l < coordinates.length; l++) {
-                        for (k = 0; k < coordinates[l].length; k++) {
-                            for (j = 0; j < coordinates[l][k].length; j++) {
-                                coordinates[l][k][j][1] = tileSize - coordinates[l][k][j][1];
-                            }
-                        }
-                    }
-                }
+	var url = 'http://localhost:8080/basemap/15/23938/10514.json';
 
-                if ('reprpoint' in feature) {
-                    feature.reprpoint[1] = tileSize - feature.reprpoint[1];
-                }
-            }
-        }
+	window.Kothic.loadJSON(url, function(geojson) {
+		kothic.render(canvas, geojson, 16, function() {});
+	});
 	</script>
 </body>
 </html>
